Tested the zipfile compression

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,6 +28,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Zip Files
+        uses: vimtor/action-zip@v1.1
+        with:
+          files: plugin.video.lo-scienziato-pazzo
+          dest: repo/sinstaller.zip
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
