Crafting a good zip file

--- a/.github/workflows/zip_files.yml
+++ b/.github/workflows/zip_files.yml
@@ -16,3 +16,4 @@ jobs:
         with:
           files: plugin.video.lo-scienziato-pazzo
           dest: repo/installer.zip
+          recursive: false
