--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           files: plugin.video.lo-scienziato-pazzo
           dest: repo/plugin.video.lo-scienziato-pazzo.zip
+          recursive: false
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
